# protoc-gen-pyhttp

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
protoc_gen_http_python/: http.py  main.py  protoc_gen_http_python.bat  template.py
protoc_gen_pyhttp/: http.py  main.py  template.py  util.py
test/: test_generated_http.py
