[metadata]
name = protoc-gen-http-python
version = attr: protoc_gen_pyhttp.main.__version__
description = Generate server classes that correspond to services defined in http-protobuf.
keywords = protobuf, proto
license = Apache License 2.0
author = azicen
author_email = chenjiazi@aliyun.com
url = https://github.com/azicen/protoc-gen-http-python

[options]
packages = find:
py_modules =
    protoc_gen_pyhttp
    protoc_gen_pyhttp.main
install_requires =
    protobuf>=3.20.3
    googleapis-common-protos>=1.57.1
    Jinja2>=3.0.0
python_requires = >=3.7

[options.entry_points]
console_scripts =
    protoc-gen-pyhttp = protoc_gen_pyhttp.main:main
